# clinkz

./: Cargo.toml  README.md
clinkz/: Cargo.toml
clinkz-auth/: Cargo.toml
clinkz-auth/database/sql/v0.0.1/: 001_oauth_clients.sql  002_authorization_codes.sql  003_access_tokens.sql  004_refresh_tokens.sql  005_audit_logs.sql  006_device_authorizations.sql  007_jwk_keys.sql  008_revoked_tokens.sql  func_001_sha256_bytea.sql  trig_001_validate_oauth_clients_redirect_uris.sql  trig_002_update_updated_at.sql
clinkz-auth/src/: lib.rs  oauth_server.rs  provider.rs  services.rs
clinkz-cloud/: Cargo.toml
clinkz-cloud/src/: main.rs
clinkz-core/: Cargo.toml
clinkz-core/src/: error.rs  lib.rs
clinkz-edge/: Cargo.toml
clinkz-macro/: Cargo.toml
clinkz-macro/src/: lib.rs
clinkz/src/: api.rs  app.rs  config.rs  lib.rs
