[workspace]
resolver = "3"
members = ["clinkz", "clinkz-auth", "clinkz-cloud", "clinkz-core", "clinkz-edge"]

[workspace.package]
license = "MIT"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mimalloc = "0.1"

clap = { version = "4.5", features = ["derive"] }
config = "0.15"
dotenv = "0.15"

tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "std",
    "fmt",
    "time"
] }


thiserror = "2.0"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }

validator = { version = "0.20", features = ["derive"] }

tokio = "1.48"

axum = "0.8"
