[workspace]
resolver = "3"
members = ["clinkz", "clinkz-auth", "clinkz-cloud", "clinkz-core", "clinkz-edge", "clinkz-macro"]

[workspace.package]
license = "MIT"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mimalloc = "0.1"

thiserror = "2.0"
anyhow = "1.0"

tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "std",
    "fmt",
    "time"
] }

tower-http = { version = "0.6", features = ["trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.8", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }

tokio = "1.48"
axum = "0.8"

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "migrate"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.22"
