[package]
name = "clinkz-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]

clinkz = { path = "../clinkz" }
clinkz-core = { path = "../clinkz-core" }
clinkz-macro = { path = "../clinkz-macro" }

tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

tower-http.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["full"] }

thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
