[package]
name = "clinkz"
version.workspace = true
edition.workspace = true

[dependencies]
mimalloc.workspace = true
once_cell = "1.21"

uuid.workspace = true
validator.workspace = true

tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true

tower-http.workspace = true

tokio = { workspace = true, features = ["full"] }
axum.workspace = true

serde.workspace = true

arc-swap = "1.7"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
dotenv = "0.15"
